--- a/configuracoes.html
+++ b/configuracoes.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="Sketches_css/reset.css">
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
-    <body>
-        <header class="cabeçalho">
-            <h1><span>
-                Configurações
-                <img src="Imagens/gear.png" alt="Configurações" height=30 width=30>
-            </span></h1><hr>
-        </header>
+<body>
+    <!--Cabeçalho-->
+    <header class="cabecario">
+        <ul class="retirar">
+            <li><h1 id="title">Configurações</h1></li>
+            <li><img src="Imagens/gear.png" alt="Gear"></li>
+        </ul>
+    </header>
 
         <main>
             <h2>
@@ -23,6 +24,10 @@
                 Contato: .................<br>
                 Endereço: ................<br>
             </h2>
+            <a class="botao_config">Editar</a>
+            <a class="botao_config">Perguntas Frequentes</a>
+            <a class="botao_config">Central de Ajuda</a>
+
             <p>
                 Editar <br>
                 Perguntas Frequentes <br>
@@ -30,6 +35,7 @@
             </p>
 
             <a href="menu.html"><img src="Imagens/back.png" alt="Botão de Voltar" id="voltar"></a>
+            
         </main>
     
     </body>
