--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <!--Cabeçalho-->
-    <title> Estacionado - Detalhes Vagas </title>
+    <title> Estacionado - Detalhes Histórico </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sketches_css/reset.css">
@@ -87,9 +87,9 @@
                 </div>
             </li>
             <li class="linha">
-                <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" id="setas"></a>
+                <a><img src="Imagens/Seta1.png" alt="Ir para a área 1" class="setas"></a>
                 <p>Área 2</p>
-                <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" id="setas"></a>
+                <a><img src="Imagens/Seta2.png" alt="Ir para a área 3" class="setas"></a>
             </li>
         </ul>
     </div>
