--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -78,12 +78,12 @@
                     -Recomendação
                 </div>
                 <div class="linha">
-                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
-                    -Área Pouco Utilizada
+                    <img class = "leg" src="Imagens/laranja.png" alt="Vaga laranja">
+                    -Vaga Pouco Utilizada
                 </div>
                 <div class="linha">
-                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
-                    -Área Muito Utilizada
+                    <img class = "leg" src="Imagens/vermelho.png" alt="Vaga vermelha">
+                    -Vaga Muito Utilizada
                 </div>
             </li>
             <li class="linha">
