--- a/Piso1.html
+++ b/Piso1.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <!--Botão para voltar e nome do piso respectivo-->
-        <ul class="linha2" id="piso1">
+        <ul class="linha2">
             <li class="voltar_piso1">
                 <a href="index.html">
                     <img src="Imagens/back.png" alt='Botão de voltar' class='voltar_piso' id="voltar">
@@ -74,7 +74,7 @@
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
         
-        <ul class="linha" id="piso1">
+        <ul class="linha">
             <li>
             <a class="botao_leg"><!--Legenda das imagens da matrix-->
                 Legenda
