--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -37,7 +37,7 @@
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             
             <a href="Piso1.html">
-                <img src="Imagens/back.png" alt="Botão de voltar" id="voltar">
+                <img src="Imagens/back.png" alt="Botão de voltar" class="voltar_hist" id="voltar">
             </a>
         </main>
     </body>
