--- a/menu.html
+++ b/menu.html
@@ -7,33 +7,30 @@
         <link rel="stylesheet" href="Sketches_css/reset.css">
         <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
-    <body>
+    <body class="body_menu">
         <!--Cabeçalho-->
-        <header class="cabeçalho">
-            <h1><span>
-                Estacionamento MultiPark Insper <br>
-                End: Rua Quatá, 200, Vila Olímpia, SP
-                <a href="index.html">
-                    <img src="Imagens/menu.png" alt="menu" width="50" height="50">
-                </a>
-            </span></h1>
+        <header id="header_menu">
+            <ul class="retirar" id="alinha_menu">
+              <li><h1 id="title_menu">Estacionamento MultiPark Insper<br>End: Rua Quatá, 200, Vila Olímpia, SP</h1></li>
+              <li><a href="index.html"><img src="Imagens/menu.png" alt="menu" id="icone_menu"></a></li>
+            </ul>
         </header>
-        <main>
-            <hr>
-            <h2>
-                Editar Estacionamento 
-            </h2><hr>
-            <h2>
-                Editar Pisos 
-            </h2><hr>
-            <h2>
-                Adicionar Pisos 
-            </h2><hr>
 
-            <h2>
+        <main>
+            <ul id="retirar_menu">
+                <li>
+                Editar Estacionamento 
+                </li>
+                <li>
+                Editar Pisos 
+                </li>
+                <li>
+                Adicionar Pisos 
+                </li>
+                <li>
                 <a href="configuracoes.html">
-                    Configurações </a>
-            </h2><hr>
+                    Configurações </a></li>
+            </ul>
             
             <a href="index.html">
                 <img src="Imagens/back.png" alt='botão voltar' id="voltar"></a>
