--- a/Tarefas.html
+++ b/Tarefas.html
@@ -7,6 +7,9 @@
         <title>Estacionado - Tarefas</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
         <link rel="stylesheet" href="Sketches_css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
     </head>
 
     <body>
