--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
             </ul>
         </header>
 
-        <main>
+        <main class="main_menu">
             <ul id="retirar_menu">
                 <li>
                 Editar Estacionamento 
