--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -81,11 +81,11 @@
                     -Recomendação
                 </div>
                 <div class="linha">
-                    <img class = "leg" src="Imagens/laranja.png" alt="Vaga laranja">
+                    <img class = "leg" src="Imagens/laranja.jpg" alt="Vaga laranja">
                     -Vaga Pouco Utilizada
                 </div>
                 <div class="linha">
-                    <img class = "leg" src="Imagens/vermelho.png" alt="Vaga vermelha">
+                    <img class = "leg" src="Imagens/vermelho.jpg" alt="Vaga vermelha">
                     -Vaga Muito Utilizada
                 </div>
             </li>
