--- a/Piso1.html
+++ b/Piso1.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     <!--Inteface principal em que mostra uma matrix com as diferentes magas de uma dada área-->
-    <div class="coluna">
+    <div class="coluna_piso1">
         <div class="linha">
             <p></p>
             <p>E</p>
