--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -75,7 +75,7 @@
         </div>
         <!--Legenda-->
         <div class="linha"></div>
-        <ul class="linha" id="piso1">
+        <ul class="linha" id="dest">
             <li>
                 <div class="linha">
                     <img src="Imagens/Exclamacao.png" alt="Recomendação">
