--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
+    <script src="JavaS/detalhes_cliente.js"></script> 
 </head>
 
 <body>
