mudança de icone das recomendações

--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -48,7 +48,7 @@
         <div class="linha">
             <p>2</p>
             <img src="Imagens/triangle.png" alt="Vaga agendada">
-            <img src="Imagens/Exclamacao.png" alt="Recomendação">
+            <img src="Imagens/star.png" alt="Recomendação">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
@@ -56,7 +56,7 @@
         <div class="linha">
             <p>3</p>
             <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img src="Imagens/Exclamacao.png" alt="Recomendação">
+            <img src="Imagens/star.png" alt="Recomendação">
             <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "first" src="Imagens/triangle.png" alt="Vaga agendada">
         </div>
@@ -79,7 +79,7 @@
         <ul class="linha" id="dest">
             <li>
                 <div class="linha">
-                    <img src="Imagens/Exclamacao.png" alt="Recomendação">
+                    <img src="Imagens/star.png" alt="Recomendação">
                     -Recomendação
                 </div>
                 <div class="linha">
