--- a/Piso1.html
+++ b/Piso1.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
-    <script src="JavaS/Piso1.js"></script>  
+    <script src="JavaS/Piso1.js"></script> 
+    <script src="JavaS/popups.js"></script>  
 </head>
 <body>
     <!--Cabeçalho-->
