--- a/index.html
+++ b/index.html
@@ -35,9 +35,35 @@
             <a href=""  class="margem_inf">  
               Piso 4  </a>
           </h2> 
-          <a class="botao_taf" href="tarefas.html">
+          <a class="botao_taf" href="">
             <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
           </a>
+
+          <div class="popup">
+            <div class="fake_header">
+                <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
+                <b>Tarefas</b>
+            </div>
+            <div class="fake_main">
+                <ul class="alinhamento">
+                    <!--Tarefas a fazer pelo usuário-->
+                    <li>
+                        <p>Liberar passagem para saída do carro na 3B </p>
+                    </li>
+                    <li>
+                        <p>Reservada vaga para carro que chegará às 13h </p>
+                    </li>
+                    <li>
+                        <p>Reservar vaga para carro que chegará às 13h </p>
+                    </li>
+                </ul>
+                <a href="index.html">
+                    <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+                </a>
+            </div>
+
+        </div>
+        </div>
         </main>
     </body>
 </html>
