--- a/Piso1.html
+++ b/Piso1.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
     <script src="JavaS/Piso1.js"></script> 
     <script src="JavaS/popups.js"></script>  
+    <script src="JavaS/index.js"></script> 
 </head>
 <body>
     <!--Cabeçalho-->
@@ -98,9 +99,31 @@
         </a>
     </div>
 
-    <a class="botao_taf" href="tarefas.html">
+    <a class="botao_taf" href="">
         <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
     </a>
+    <div class="popup">
+        <div class="fake_header">
+            <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
+            <b>Tarefas</b>
+        </div>
+        <div class="fake_main">
+            <ul class="alinhamento">
+                <!--Tarefas a fazer pelo usuário-->
+                <li>
+                    <p>Liberar passagem para saída do carro na 3B </p>
+                </li>
+                <li>
+                    <p>Reservada vaga para carro que chegará às 13h </p>
+                </li>
+                <li>
+                    <p>Reservar vaga para carro que chegará às 13h </p>
+                </li>
+            </ul>
+            <a href="index.html">
+                <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+            </a>
+        </div>
 </main>
 </body>
 </html>
