--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -23,7 +23,7 @@
     </header>
     <main>
     <h2><span>
-        <a href="index.html">
+        <a href="Analise_hist.html">
             <img src="Imagens/back.png" alt="Botão de Voltar" id="voltar">
         </a>
         <b>PISO 1</b>
