--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <a href=""  class="margem_inf">  
               Piso 4  </a>
           </h2> 
-          <a class="botao_taf" href="">
+          <button class="botao_taf" href="">
             <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-          </a>
+          </button>
 
           <div class="popup">
             <div class="fake_header">
