--- a/Piso1.html
+++ b/Piso1.html
@@ -47,7 +47,7 @@
             <p>1</p>
             <img class = "Vaga livre" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "Vaga livre" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "Vaga ocupada" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img class="Vaga ocupada" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img class = "Vaga agendada" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
         </div>
         <div class="linha">
@@ -98,9 +98,9 @@
         </a>
     </div>
 
-    <a class="botao_taf" href="tarefas.html">
+    <button class="botao_taf" href="tarefas.html">
         <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
-    </a>
+    </button>
 </main>
 </body>
 </html>
