--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
           </button>
 
-          <div class="popup">
+          <div class="popup_tarefa">
             <div class="fake_header">
                 <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
                 <b>Tarefas</b>
