--- a/Piso1.html
+++ b/Piso1.html
@@ -102,28 +102,29 @@
     <button class="botao_taf" href="tarefas.html">
         <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
     </button>
-    <div class="popup">
-        <div class="fake_header">
-            <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
-            <b>Tarefas</b>
-        </div>
-        <div class="fake_main">
-            <ul class="alinhamento">
-                <!--Tarefas a fazer pelo usuário-->
-                <li>
-                    <p>Liberar passagem para saída do carro na 3B </p>
-                </li>
-                <li>
-                    <p>Reservada vaga para carro que chegará às 13h </p>
-                </li>
-                <li>
-                    <p>Reservar vaga para carro que chegará às 13h </p>
-                </li>
-            </ul>
-            <a href="index.html">
-                <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-            </a>
-        </div>
 </main>
 </body>
+<div class="popup_tarefa">
+    <div class="fake_header">
+        <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
+        <b>Tarefas</b>
+    </div>
+    <div class="fake_main">
+        <ul class="alinhamento">
+            <!--Tarefas a fazer pelo usuário-->
+            <li>
+                <p>Liberar passagem para saída do carro na 3B </p>
+            </li>
+            <li>
+                <p>Reservada vaga para carro que chegará às 13h </p>
+            </li>
+            <li>
+                <p>Reservar vaga para carro que chegará às 13h </p>
+            </li>
+        </ul>
+        <a href="index.html">
+            <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+        </a>
+    </div>
+</div>
 </html>
