Quase uma telinha aceitavel de registrar

--- a/Piso1.html
+++ b/Piso1.html
@@ -159,7 +159,7 @@
             <button>Enviar todos os dados</button>
         </li>
     </ul>
-    <a href="index.html">
+    <a href="Piso1.html">
         <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
     </a>
     </div>
