Tá funcionando pra todos, falta o if

--- a/Piso1.html
+++ b/Piso1.html
@@ -132,7 +132,7 @@
 
 <div class="popup_registro">
     <div class="fake_header">
-        <b>Registro de Carros</b>
+        <b>Registrar <br> veículo</b>
     </div>
     <div class="fake_main">
         <ul class="alinhamento">
