pra ver se a mia vê

--- a/Piso1.html
+++ b/Piso1.html
@@ -46,8 +46,8 @@
         </div>
         <div class="linha">
             <p>1</p>
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class= "Vaga" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img class = "Vaga" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
         </div>
@@ -55,15 +55,15 @@
             <p>2</p>
             <img class = "Vaga" src="Imagens/triangle.png" alt="Vaga agendada">
             <img class = "Vaga" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
 
         <div class="linha">
             <p>3</p>
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "Vaga" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "Vaga" src="Imagens/triangle.png" alt="Vaga agendada">
         </div>
         <div class="linha">
@@ -75,10 +75,10 @@
         </div>
         <div class="linha">
             <p>5</p>
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
             <img class = "Vaga" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
             <img class = "Vaga" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "Vaga" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img class = "Vaga_vazia" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
         </div>
         
         <ul class="linha">
