--- a/Piso1.html
+++ b/Piso1.html
@@ -164,4 +164,23 @@
     </a>
     </div>
 </div>
+
+<div class="popup_registro">
+    <div class="fake_header">
+        <b>Retirada de Carros</b>
+    </div>
+    <ul class="alinhamento">
+        <li>
+            <img src="Imagens/QRCode.jpeg">
+        </li>
+        <li>
+            <button>Ler o QR Code</button>
+        </li>
+        <li>
+            <p>* Ao ler o QR Code você confirma a retirada do veículo</p>
+        </li>
+
+
+    </ul>
+</div>
 </html>
