--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           <ul class="alinhamento">
               <!--Tarefas a fazer pelo usuário-->
               <li>
+                <a href='Piso1.html'>
                   <p>Liberar passagem para saída do carro na 3B </p>
+                </a>
               </li>
               <li>
                   <p>Reservada vaga para carro que chegará às 13h </p>
