--- a/Piso1.html
+++ b/Piso1.html
@@ -115,7 +115,7 @@
         <ul class="alinhamento">
             <!--Tarefas a fazer pelo usuário-->
             <li>
-                <p>Liberar passagem para saída do carro na 3B </p>
+                <p>Retirar carro da 3B e colocar próximo da saída </p>
             </li>
             <li>
                 <p>Reservada vaga para carro que chegará às 13h </p>
@@ -170,7 +170,7 @@
         <b>Retirada de Carros</b>
     </div>
     <ul class="alinhamento">
-        
+        <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
     </ul>
 </div>
 </html>
