--- a/Tarefas.html
+++ b/Tarefas.html
@@ -29,7 +29,7 @@
                     <!--Tarefas a fazer pelo usuário-->
                     <a href="Piso1.html">
                         <li>
-                            <p>Liberar passagem para saída do carro na 3B </p>
+                            <p>Retirar carro da 3B e colocar próximo da saída </p>
                         </li>
                     </a>
                     <li>
