--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <!--Tarefas a fazer pelo usuário-->
               <li>
                 <a href='Piso1.html'>
-                  <p>Liberar passagem para saída do carro na 3B </p>
+                  <p>Retirar carro da 3B e colocar próximo da saída</p>
                 </a>
               </li>
               <li>
