mas bah gurizes

--- a/Piso1.html
+++ b/Piso1.html
@@ -170,7 +170,12 @@
         <b>Retirada de Carros</b>
     </div>
     <ul class="alinhamento">
-        <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
+        <li>
+            <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
+        </li>
+        <li>
+            <button>Retirar veículo</button>
+        </li>        
     </ul>
 </div>
 </html>
