--- a/legenda.html
+++ b/legenda.html
@@ -25,25 +25,25 @@
                 <ul class="alinhamento">
                     <li>
                         <div class="linha">
-                            <img src="Imagens/star.png" alt="Recomendação">
+                            <img class = "leg" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
                             -Vaga vazia (Pode ser editada para adicionar um veículo)
                         </div>
                     </li>
                     <li>
                         <div class="linha">
-                            <img class = "leg" src="Imagens/laranja.jpg" alt="Vaga laranja">
+                            <img class = "leg" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
                             -Vaga ocupada
                         </div>
                     </li>
                     <li>
                         <div class="linha">
-                            <img class = "leg" src="Imagens/vermelho.jpg" alt="Vaga vermelha">
+                            <img class = "leg" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
                             -Vaga agendada para ser usada
                         </div>
                     </li>
                     <li>
                         <div class="linha">
-                            <img class = "leg" src="Imagens/vermelho.jpg" alt="Vaga vermelha">
+                            <img class = "leg" src="Imagens/triangle.png" alt="Vaga que será ocupada logo mais">
                             -Vaga que será ocupada logo mais
                         </div>
                     </li>
