--- a/Piso1.html
+++ b/Piso1.html
@@ -165,7 +165,7 @@
     </div>
 </div>
 
-<div class="popup_registro">
+<div class="popup_retirada">
     <div class="fake_header">
         <b>Retirada de Carros</b>
     </div>
