--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -98,5 +98,28 @@
             </li>
         </ul>
     </div>
+    <div class="body_menu" id="menu">
+        <!--Cabeçalho-->
+        <div id="header_menu">
+            <ul class="retirar" id="alinha_menu">
+              <li><h1 id="title_menu">Estacionamento MultiPark Insper<br>End: Rua Quatá, 200, Vila Olímpia, SP</h1></li>
+              <li><button class="botao_menu_fechar"><img src="Imagens/menu.png" alt="menu" id="icone_menu"></buttons></li>
+            </ul>
+        </div>
+  
+        <div class="main_menu">
+            <ul id="retirar_menu">
+                <li>
+                Editar Pisos 
+                </li>
+                <li>
+                Adicionar Pisos 
+                </li>
+                <li>
+                <a href="configuracoes.html">
+                    Configurações </a></li>
+            </ul>
+        </div>
+      </div>
 </body>
 </html>
