--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -12,15 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
     <script src="JavaS/detalhes_historico.js"></script> 
+    <script src="JavaS/menu.js"></script>    
 </head>
 <body>
     <header class="cabecario">
         <ul class="retirar">
-            <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
-            <li><h1 id="title">Estacionado</h1></li>
-            <li><img src="Imagens/Logo.png" alt="Logo"></li>
+          <li><button" class="botao_menu_abrir"><img src="Imagens/menu.png" alt="menu"></button></li>
+          <li><h1 id="title">Estacionado</h1></li>
+          <li><img src="Imagens/Logo.png" alt="Logo"></li>
         </ul>
-    </header>
+      </header>
     <main>
     <h2><span>
         <a href="Analise_hist.html">
