--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
         <script src="JavaS/Analise_hist.js"></script>  
+        <script src="JavaS/menu.js"></script>    
     </head>
 
 
@@ -20,11 +21,11 @@
 
         <header class="cabecario">
             <ul class="retirar">
-                <li><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></li>
-                <li><h1 id="title">Estacionado</h1></li>
-                <li><img src="Imagens/Logo.png" alt="Logo"></li>
+              <li><button" class="botao_menu_abrir"><img src="Imagens/menu.png" alt="menu"></button></li>
+              <li><h1 id="title">Estacionado</h1></li>
+              <li><img src="Imagens/Logo.png" alt="Logo"></li>
             </ul>
-        </header>
+          </header>
         <main id="main_analise_hist">
             <h2>
                 Selecione a data que deseja analisar:
