--- a/Piso1.html
+++ b/Piso1.html
@@ -169,13 +169,18 @@
     <div class="fake_header">
         <b>Retirada de Carros</b>
     </div>
-    <ul class="alinhamento">
-        <li>
-            <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
-        </li>
-        <li>
-            <button>Retirar veículo</button>
-        </li>        
-    </ul>
+    <div class="fake_main">
+        <ul class="alinhamento">
+            <li>
+                <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
+            </li>
+            <li>
+                <button>Retirar veículo</button>
+            </li>        
+        </ul>
+        <a href="Piso1.html">
+            <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+        </a>
+    </div>
 </div>
 </html>
