--- a/Piso1.html
+++ b/Piso1.html
@@ -190,21 +190,38 @@
 </div>
 
 <div class="popup_retirada">
-    <div class="fake_header">
-        <b>Retirada de Carros</b>
-    </div>
-    <div class="fake_main">
-        <ul class="alinhamento">
-            <li>
-                <p>Tem certeza que gostaria de retirar o veículo da vaga 3B?</p>
-            </li>
-            <li>
-                <button>Retirar veículo</button>
-            </li>        
-        </ul>
-        <a href="Piso1.html">
-            <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-        </a>
+    <div class="popup">
+        <div class="fake_main">
+            <div class="fake_header">
+                <b>Prestes a sair</b>
+            </div>
+            <ul id="align_cli">
+                <!--Detalhes do veículo na vaga-->
+                <li>
+                    <p><em>HJC-9805</em></p>
+                </li>
+                <li>
+                    <p>Dono do Carro</p>
+                </li>
+                <li>
+                    <p><em>[HB20 prata]</em></p>
+                </li>
+                <li>
+                    <p>Está a caminho</p>
+                </li>
+                <li id="align_cli_img">
+                    <img src="Imagens/clock.png" height=25 width=25 alt="Relógio">
+                    <h2>3 Minutos e 40 Secs</h2>
+                </li>
+                <li>
+                    <button>Retirar veículo</button>
+                </li>    
+            </ul>
+            <!--Botão em seta para voltar-->
+            <a href="index.html">
+                <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+            </a>
+        </div>
     </div>
 </div>
 </html>
