--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -41,55 +41,59 @@
         </div>
         <div class="linha">
             <p>1</p>
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "first" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "first" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
         </div>
         <div class="linha">
             <p>2</p>
-            <img src="Imagens/triangle.png" alt="Vaga agendada">
-            <img src="Imagens/star.png" alt="Recomendação">
-            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/estrela_colorida.png" alt="Recomendação">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
         </div>
 
         <div class="linha">
             <p>3</p>
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img src="Imagens/star.png" alt="Recomendação">
-            <img class = "first" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "first" src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/estrela_colorida.png" alt="Recomendação">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
+            <img src="Imagens/atencao.png" alt="Vaga ocupada">
         </div>
         <div class="linha">
             <p>4</p>
-            <img src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
-            <img class = "second" src="Imagens/triangle.png" alt="Vaga agendada">
-            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
         </div>
         <div class="linha">
             <p>5</p>
-            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "second" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-            <img class = "second" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/star.png" alt="Vaga livre">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
+            <img src="Imagens/cancelar.png" alt="Vaga muito usada">
         </div>
         <!--Legenda-->
         <div class="linha"></div>
         <ul class="linha" id="dest">
             <li>
-                <div class="linha">
+                <div class="linha_fonte">
                     <img src="Imagens/star.png" alt="Recomendação">
-                    -Recomendação
+                    -Vaga pouco usada (Recomendação)
                 </div>
-                <div class="linha">
-                    <img class = "leg" src="Imagens/laranja.jpg" alt="Vaga laranja">
-                    -Vaga Pouco Utilizada
+                <div class="linha_fonte">
+                    <img src="Imagens/estrela_colorida.png" alt="Muito Recomendado">
+                    -Vaga quase nunca utilizada (Grande Recomendação)
                 </div>
-                <div class="linha">
-                    <img class = "leg" src="Imagens/vermelho.jpg" alt="Vaga vermelha">
-                    -Vaga Muito Utilizada
+                <div class="linha_fonte">
+                    <img src="Imagens/atencao.png" alt="Vaga ocupada">
+                    -Vaga bastante utilizada 
+                </div>
+                <div class="linha_fonte">
+                    <img src="Imagens/cancelar.png" alt="Vaga muito usada">
+                    -Vaga utilizada demais
                 </div>
             </li>
             <li class="linha">
@@ -123,4 +127,5 @@
         </div>
       </div>
 </body>
+
 </html>
