--- a/Piso1.html
+++ b/Piso1.html
@@ -218,7 +218,7 @@
                 </li>    
             </ul>
             <!--Botão em seta para voltar-->
-            <a href="index.html">
+            <a href="Piso1.html">
                 <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
             </a>
         </div>
