--- a/Piso1.html
+++ b/Piso1.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500&family=Saira:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=PT+Serif&display=swap" rel="stylesheet">
     <script src="JavaS/Piso1.js"></script> 
-    <script src="JavaS/popups.js"></script>  
     <script src="JavaS/index.js"></script> 
     <script src="JavaS/menu.js"></script>    s
 </head>
@@ -214,7 +213,7 @@
                     <h2>3 Minutos e 40 Secs</h2>
                 </li>
                 <li>
-                    <button>Retirar veículo</button>
+                    <button class="botao_retirar">Retirar veículo</button>
                 </li>    
             </ul>
             <!--Botão em seta para voltar-->
