--- a/Piso1.html
+++ b/Piso1.html
@@ -229,29 +229,29 @@
     <b>Legenda das vagas:</b>
 </div>
 <div class="fake_main">
-    <ul class="alinhamento">
+    <ul class="alinhamento_leg">
         <li>
             <div class="linha">
                 <img class = "leg" src="Imagens/Circulo-vazio.png" alt="Vaga livre">
-                -Vaga vazia (Pode ser editada para adicionar um veículo)
+                <p>-Vaga vazia (Pode ser editada para adicionar um veículo)</p>
             </div>
         </li>
         <li>
             <div class="linha">
                 <img class = "leg" src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
-                -Vaga ocupada
+                <p>-Vaga ocupada</p>
             </div>
         </li>
         <li>
             <div class="linha">
                 <img class = "leg" src="Imagens/circulo-hashurado.png" alt="Vaga agendada">
-                -Vaga agendada para ser usada
+                <p>-Vaga agendada para ser usada</p>
             </div>
         </li>
         <li>
             <div class="linha">
                 <img class = "leg" src="Imagens/triangle.png" alt="Vaga que será ocupada logo mais">
-                -Vaga que será ocupada logo mais
+                <p>-Vaga que será ocupada logo mais</p>
             </div>
         </li>
     </ul>
