--- a/Piso1.html
+++ b/Piso1.html
@@ -217,9 +217,9 @@
                 </li>    
             </ul>
             <!--Botão em seta para voltar-->
-            <a href="Piso1.html">
+            <button class="voltar_registro">
                 <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-            </a>
+            </button>
         </div>
     </div>
 </div>
