BOTÃO VOLTAR PARA N ATUALIZAR

--- a/Piso1.html
+++ b/Piso1.html
@@ -182,9 +182,9 @@
             <button id="registrando">Enviar todos os dados</button>
         </li>
     </ul>
-    <a href="Piso1.html">
+    <button class="voltar_registro">
         <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-    </a>
+    </button>
     </div>
 </div>
 
@@ -217,7 +217,7 @@
                 </li>    
             </ul>
             <!--Botão em seta para voltar-->
-            <button class="voltar_registro">
+            <button class="voltar_retirada">
                 <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
             </button>
         </div>
