--- a/Piso1.html
+++ b/Piso1.html
@@ -213,7 +213,7 @@
                     <h2>3 Minutos e 40 Secs</h2>
                 </li>
                 <li>
-                    <button class="botao_retirar">Retirar veículo</button>
+                    <button id="retirando">Retirar veículo</button>
                 </li>    
             </ul>
             <!--Botão em seta para voltar-->
