--- a/Piso1.html
+++ b/Piso1.html
@@ -170,13 +170,11 @@
             <input class="campo" type="text" placeholder="Modelo do carro">
         </li>
         <li>
-            <input class="campo" type="text" placeholder="Piso">
+            <p id="Data_go">Saída prevista:</p>
+            <input class="date_go" type="date">
         </li>
         <li>
-            <input class="campo" type="text" placeholder="Sessão">
-        </li>
-        <li>
-            <input class="campo" type="text" placeholder="Nome da vaga">
+            <input class="date_go" type="time">
         </li>
         <li>
             <button id="registrando">Enviar todos os dados</button>
