--- a/Piso1.html
+++ b/Piso1.html
@@ -161,20 +161,20 @@
         <ul class="alinhamento">
         <!--Tarefas a fazer pelo usuário-->
         <li>
-            <input class="campo" type="text" placeholder="Nome do motorista">
+            <input id="campo1" type="text" placeholder="Nome do motorista">
         </li>
         <li>
-            <input class="campo" type="text" placeholder="Placa do carro">
+            <input id="campo2" type="text" placeholder="Placa do carro">
         </li>
         <li>
-            <input class="campo" type="text" placeholder="Modelo do carro">
+            <input id="campo3" type="text" placeholder="Modelo do carro">
         </li>
         <li>
             <p id="Data_go">Saída prevista:</p>
-            <input class="date_go" type="date">
+            <input id="date_go" type="date">
         </li>
         <li>
-            <input class="date_go" type="time">
+            <input id="time_go" type="time">
         </li>
         <li>
             <button id="registrando">Enviar todos os dados</button>
