--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <!--Cabeçalho-->
         <header class="cabecario">
           <ul class="retirar">
-            <li><button" class="botao_menu_abrir"><img src="Imagens/menu.png" alt="menu"></button></li>
+            <li>
+            <button class="botao_menu_abrir">
+              <img src="Imagens/menu.png" alt="menu">
+            </button>
+            </li>
             <li><h1 id="title">Estacionado</h1></li>
             <li><img src="Imagens/Logo.png" alt="Logo"></li>
           </ul>
@@ -37,25 +41,24 @@
               Piso 4  </a>
           </h2> 
           <button class="botao_taf">
-            <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+            <img src="Imagens/clipboard.png" alt='tarefas' class='taf'>
           </button>
-
-          
-        </div>
         </main>
-    </body>
 
-    <div class="body_menu" id="menu">
-      <!--Cabeçalho-->
-      <div id="header_menu">
+
+      <div class="body_menu" id="menu">
+        <div id="header_menu">
           <ul class="retirar" id="alinha_menu">
             <li><h1 id="title_menu">Estacionamento MultiPark Insper<br>End: Rua Quatá, 200, Vila Olímpia, SP</h1></li>
-            <li><button class="botao_menu_fechar"><img src="Imagens/menu.png" alt="menu" id="icone_menu"></buttons></li>
+            <li>
+              <button class="botao_menu_fechar">
+                <img src="Imagens/menu.png" alt="menu" id="icone_menu">
+              </button>
+          </li>
           </ul>
-      </div>
-
-      <div class="main_menu">
-          <ul id="retirar_menu">
+        </div>
+        <div class="main_menu">
+            <ul id="retirar_menu">
               <li>
               Editar Pisos 
               </li>
@@ -63,36 +66,38 @@
               Adicionar Pisos 
               </li>
               <li>
-              <a href="configuracoes.html">
-                  Configurações </a></li>
-          </ul>
+              <a href="configuracoes.html">Configurações</a>
+              </li>
+            </ul>
+        </div>
       </div>
-    </div>
+      
+  
+      <div class="popup_tarefa">
+        <div class="fake_header">
+            <img src="Imagens/clipboard.png" alt='tarefas' class="taf">
+            <b>Tarefas</b>
+        </div>
+        <div class="fake_main">
+            <ul class="alinhamento">
+                <!--Tarefas a fazer pelo usuário-->
+                <li>
+                  <a href='Piso1.html'>
+                    <p>Retirar carro da 3B e colocar próximo da saída</p>
+                  </a>
+                </li>
+                <li>
+                    <p>Reservada vaga para carro que chegará às 13h </p>
+                </li>
+                <li>
+                    <p>Reservar vaga para carro que chegará às 13h </p>
+                </li>
+            </ul>
+            <a href="index.html">
+                <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
+            </a>
+        </div>
+      </div>
+    </body>
 
-    <div class="popup_tarefa">
-      <div class="fake_header">
-          <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
-          <b>Tarefas</b>
-      </div>
-      <div class="fake_main">
-          <ul class="alinhamento">
-              <!--Tarefas a fazer pelo usuário-->
-              <li>
-                <a href='Piso1.html'>
-                  <p>Retirar carro da 3B e colocar próximo da saída</p>
-                </a>
-              </li>
-              <li>
-                  <p>Reservada vaga para carro que chegará às 13h </p>
-              </li>
-              <li>
-                  <p>Reservar vaga para carro que chegará às 13h </p>
-              </li>
-          </ul>
-          <a href="index.html">
-              <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
-          </a>
-      </div>
-
-  </div>
 </html>
