acho q tá certo

--- a/Piso1.html
+++ b/Piso1.html
@@ -98,9 +98,8 @@
             <h3>Histórico</h3>
         </a>
     </div>
-
-    <button class="botao_taf" href="tarefas.html">
-        <img src="Imagens/clipboard.png" alt='tarefas' id='taf'>
+    <button class="botao_taf">
+        <img src="Imagens/clipboard.png" alt='tarefas' class='taf'>
     </button>
 </main>
 <div class="body_menu" id="menu">
@@ -131,7 +130,7 @@
 <!--POPUPS DE REGISTRO E TAREFAS-->
 <div class="popup_tarefa">
     <div class="fake_header">
-        <img src="Imagens/clipboard.png" alt='tarefas' id="taf">
+        <img src="Imagens/clipboard.png" alt='tarefas' class="taf">
         <b>Tarefas</b>
     </div>
     <div class="fake_main">
@@ -147,7 +146,7 @@
                 <p>Reservar vaga para carro que chegará às 13h </p>
             </li>
         </ul>
-        <a href="index.html">
+        <a href="Piso1.html">
             <img src="Imagens/back.png" alt='Botão de voltar' id="voltar">
         </a>
     </div>
