--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -17,7 +17,7 @@
 <body>
     <header class="cabecario">
         <ul class="retirar">
-          <li><button" class="botao_menu_abrir"><img src="Imagens/menu.png" alt="menu"></button></li>
+          <li><button class="botao_menu_abrir"><img src="Imagens/menu.png" alt="menu"></button></li>
           <li><h1 id="title">Estacionado</h1></li>
           <li><img src="Imagens/Logo.png" alt="Logo"></li>
         </ul>
@@ -108,7 +108,7 @@
         <div id="header_menu">
             <ul class="retirar" id="alinha_menu">
               <li><h1 id="title_menu">Estacionamento MultiPark Insper<br>End: Rua Quatá, 200, Vila Olímpia, SP</h1></li>
-              <li><button class="botao_menu_fechar"><img src="Imagens/menu.png" alt="menu" id="icone_menu"></buttons></li>
+              <li><button class="botao_menu_fechar"><img src="Imagens/menu.png" alt="menu" id="icone_menu"></button></li>
             </ul>
         </div>
   
