--- a/Piso1.html
+++ b/Piso1.html
@@ -247,7 +247,7 @@
             <li>
                 <div class="linha">
                     <img class = "leg" src="Imagens/triangle.png" alt="Vaga que será ocupada logo mais">
-                    <p>-Vaga que será ocupada logo mais</p>
+                    <p>-Vaga que será desocupada mais cedo</p>
                 </div>
             </li>
         </ul>
