--- a/Piso1.html
+++ b/Piso1.html
@@ -136,7 +136,7 @@
             <ul class="alinhamento">
                 <!--Tarefas a fazer pelo usuário-->
                 <li>
-                    <p>Retirar carro da 3B e colocar próximo da saída </p>
+                    <p>Retirar carro da 3H e colocar próximo da saída </p>
                 </li>
                 <li>
                     <p>Reservada vaga para carro que chegará às 13h </p>
